--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,20 @@ authors = ["Scotow <contact@scotow.com>"]
 edition = "2018"
 
 [workspace]
-members = [
-    "lib",
-    "bin"
-]
+members = ["crates/core"]
+
+[[bin]]
+path = "src/main.rs"
+name = "skysold"
+
+[dependencies]
+lib = { path = "crates/core", package = "skysold-lib" }
+nustify = { git = "https://github.com/scotow/nustify", rev = "ac011cc" }
+uuid = { version = "0.8", features = ["serde"] }
+num-format = "0.4"
+async-io = "1.3"
+futures-lite = "1.11"
+structopt = "0.3"
+
+[dev-dependencies]
+uuid = { version = "0.8", features = ["v3"] }
