--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "skysold"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Scotow <contact@scotow.com>"]
 edition = "2018"
 
@@ -13,11 +13,10 @@ name = "skysold"
 
 [dependencies]
 lib = { path = "crates/core", package = "skysold-lib" }
-nustify = { git = "https://github.com/scotow/nustify", rev = "ac011cc" }
+nustify = { git = "https://github.com/scotow/nustify", rev = "e8c72d9" }
+tokio = {version = "1.2", features = ["macros", "time"] }
 uuid = { version = "0.8", features = ["serde"] }
 num-format = "0.4"
-async-io = "1.3"
-futures-lite = "1.11"
 structopt = "0.3"
 
 [dev-dependencies]
