--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "skysold-lib"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Scotow <contact@scotow.com>"]
 edition = "2018"
 
 [dependencies]
-isahc = { version = "1.1", features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-uuid = { version = "0.8", features = ["serde"] }
 base64 = "0.13"
-hematite-nbt = "0.5"
 thiserror = "1.0"
+serde_json = "1.0"
+hematite-nbt = "0.5"
+uuid = { version = "0.8", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.11", features = ["json"] }
