--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
     needs:
       - test
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: Build and push Docker image
       uses: docker/build-push-action@v1
       with:
