--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,12 +1,9 @@
-name: CI
+name: CI/CD
 
 on:
   push:
-    branches:
-      - main
-      - master
     tags:
-      - "*.*.*"
+      - "[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
   test:
